Fixed Alignment

--- a/assets/css/Tic_Tac_Toe.css
+++ b/assets/css/Tic_Tac_Toe.css
@@ -51,7 +51,7 @@ body{
 
 #answer{
     display: inline-block;
-    width: 25%;
+    width: 35%;
 }
 
 h1{
